Fix footer link color scheme
The link leading to developer's Github page white colored in Light Mode, changed the white color to #0378fc in both light and dark mode, for unvisited and visited conditions.

--- a/styles.css
+++ b/styles.css
@@ -259,3 +259,11 @@ main.dark {
     background-color: #080d15;
 
 }
+a:link{
+    color: #0378fc;
+    text-decoration: none;
+}
+a:visited{
+    color: #0378fc;
+    text-decoration: none;
+}
